[project]
name = "mp3-joiner"
version = "0.1.0"
description = "Web-сервис для объединения MP3 файлов с CSRF/Bearer защитой"
requires-python = ">=3.13"
authors = [
    { name = "Arkhipov Alexandr", email = "feedbackmp3joiner@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
force_sort_within_sections = true
combine_as_imports = true
order_by_type = true
known_first_party = ["app", "app_version", "logger", "tools", "tests"]
forced_separate = ["app_version", "logger", "tools"]
lines_between_sections = 1
lines_between_types = 1

[tool.ruff]
line-length = 120
target-version = "py313"

select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "UP", # pyupgrade
    "B", # bugbear
    "C4", # comprehensions
    "SIM", # simplify
    "PL"   # pylint
]

ignore = [
    "E501", # line too long
    "PLR2004", # magic value comparisons
]

fix = true

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
pretty = true
exclude = '(^\.venv|^tests/|^build|^dist)'

disallow_untyped_defs = false
disallow_incomplete_defs = false

# [[tool.mypy.overrides]]
# module = ["tools.security", "tools.limits", "tools.system", "tools.http"]
# disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.pylint.main]
ignore = [
    ".venv", "venv", "build", "dist", "__pycache__",
    "logs", "tools/logs", "tests/logs", "static", "templates", "migrations",
]
ignore-patterns = [".*\\.pyc", ".*_pb2\\.py"]
jobs = 0
init-hook = 'import sys; sys.path.append(".")'
reports = false
persistent = true

[tool.pylint.messages_control]
disable = [
    "C0301", # line-too-long — форматирование делает Black/Ruff
    "C0330", # bad-continuation (устарел)
    "R0903", # too-few-public-methods (DTO/конфиги)
    "W0703" # broad-except
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "j", "k", "n", "ex", "e", "dt", "ip", "ok", "fh", "ul", "db"]

[tool.pylint.design]
max-args = 6
max-returns = 8
max-branches = 12
max-statements = 60
max-bool-expr = 5
max-attributes = 12

[tool.pylint.similarities]
ignore-imports = true
